rusty-cdk-macros/tests/fails/log_retention_invalid_value.rs
use rusty_cdk_macros::log_retention;

fn example() {
    let retention = log_retention!(15);
}

fn main() {}